# BlockFall

./: .gitignore  .gitmodules  README.md
BlockFall/: CMakeLists.txt  config.json
BlockFall/source/: main.cpp
BlockFall/source/AssetManagers/: AudioManager.cpp  AudioManager.h  FontsManager.cpp  FontsManager.h  SpriteManager.cpp  SpriteManager.h
BlockFall/source/Config/: Config.h  Ruleset.h
BlockFall/source/Core/: Renderer.cpp  Renderer.h
BlockFall/source/Core/Scenes/: GameScene.cpp  GameScene.h  Scene.h
BlockFall/source/Entities/: Block.cpp  Block.h  EntityStructures.h  Piece.cpp  Piece.h
BlockFall/source/Game/: Board.h  Game.cpp  Game.h  GameField.h
BlockFall/source/Game/Scenes/: GameScene.cpp  GameScene.h  Scene.h
BlockFall/source/Input/: InputManager.cpp  InputManager.h
